# encoding_selection_plugin

./: CMakeLists.txt  Dockerfile  README.md  action.yml  command_executor.cpp  command_executor.hpp  data_characteristics.cpp  data_characteristics.hpp  plugin_meta_tables.cpp  plugin_meta_tables.hpp  pqp_export_tables.cpp  pqp_export_tables.hpp  test.sh  test_pipeline.sh  workload_handler.cpp  workload_handler.hpp
.github/workflows/: main.yml
